tests/ui/parser/issues/issue-113110-non-item-at-module-root.stderr
error: expected item, found `5`
  --> $DIR/issue-113110-non-item-at-module-root.rs:1:2
   |
LL |  5
   |  ^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

