tests/ui/parser/issues/issue-113110-non-item-at-module-root.rs
 5 //~ ERROR expected item, found `5`
